Fix sent message

--- a/Market.Value/Worker.Market.Value.Check/appsettings.json
+++ b/Market.Value/Worker.Market.Value.Check/appsettings.json
@@ -7,6 +7,6 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=Market;User Id=admin;Password=Selecttop10*from;TrustServerCertificate=True"
+    "DefaultConnection": "Server=localhost;Database=Market;User Id=sa;Password=Selecttop10*from;TrustServerCertificate=True"
   }
 }
