--- a/Market.Value/Worker.Market.Value.Check/Worker.Market.Value.Check.csproj
+++ b/Market.Value/Worker.Market.Value.Check/Worker.Market.Value.Check.csproj
@@ -14,4 +14,10 @@
   <ItemGroup>
     <ProjectReference Include="..\Market.Value.Infra\Market.Value.Infra.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
